--- a/package.json
+++ b/package.json
@@ -1,187 +1,99 @@
-import { Contract, Event, BigNumber } from 'plu-ts';
+{
+  "name": "@harmoniclabs/plu-ts",
+  "version": "0.6.3",
+  "description": "An embedded DSL for Cardano smart contracts creation coupled with a library for Cardano transactions, all in Typescript",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "browser": {
+    "worker_threads": false,
+    "node:fs": false,
+    "fs": false
+  },
+  "type": "commonjs",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "test": "jest",
+    "test:debug": "node --nolazy --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --colors --verbose",
+    "clear-jest": "jest --clearCache",
+    "test-watch": "jest --watchman",
+    "test-coverage": "jest --coverage",
+    "build": "rm -rf ./dist && tsc --project ./tsconfig.json && tsc-alias -p ./tsconfig.json",
+    "build:light": "tsc --project ./tsconfig.json && tsc-alias -p ./tsconfig.json",
+    "buidl": "npm run build",
+    "ci": "npm run test && npm run build",
+    "start": "npm-run-all --parallel build:watch run:watch",
+    "pub": "npm run ci && npm pub",
 
-export class SkillSwap extends Contract {
-  private exchangeCounter: BigNumber = BigNumber.from(0);
+    "test:onchain": "cd ./packages/onchain && npm run test",
+    "build:onchain": "cd ./packages/onchain && npm run build",
+    "buidl:onchain": "cd ./packages/onchain && npm run buidl",
+    "ci:onchain": "cd ./packages/onchain && npm run ci",
+    "pub:onchain": "cd ./packages/onchain && npm run ci && npm pub",
 
-  private users: Map<string, User> = new Map();
-  private skillExchanges: Map<BigNumber, SkillExchange> = new Map();
-  private userExchanges: Map<string, BigNumber[]> = new Map();
+    "test:offchain": "cd ./packages/offchain && npm run test",
+    "build:offchain": "cd ./packages/offchain && npm run build",
+    "buidl:offchain": "cd ./packages/offchain && npm run buidl",
+    "ci:offchain": "cd ./packages/offchain && npm run ci",
+    "pub:offchain": "cd ./packages/offchain && npm run ci && npm pub"
 
-  // Events
-  public readonly UserRegistered = new Event();
-  public readonly SkillExchangePosted = new Event();
-  public readonly SkillExchangeAccepted = new Event();
-  public readonly SkillExchangeCompleted = new Event();
-  public readonly UserRated = new Event();
-
-  // Register User
-  public async registerUser(userName: string): Promise<void> {
-    const userAddress = this.sender;
-
-    if (this.users.has(userAddress)) {
-      throw new Error('User already registered');
-    }
-
-    this.users.set(userAddress, {
-      userAddress,
-      userName,
-      reputation: BigNumber.from(0),
-      ratingCount: BigNumber.from(0)
-    });
-
-    this.UserRegistered.emit(userAddress, userName);
-  }
-
-  // Post Skill Exchange
-  public async postSkillExchange(skillOffered: string, skillRequested: string): Promise<void> {
-    const userAddress = this.sender;
-
-    if (!this.users.has(userAddress)) {
-      throw new Error('User not registered');
-    }
-
-    this.exchangeCounter = this.exchangeCounter.add(1);
-
-    const id = this.exchangeCounter;
-
-    this.skillExchanges.set(id, {
-      id,
-      requester: userAddress,
-      skillOffered,
-      skillRequested,
-      offererReputation: BigNumber.from(0),
-      offerer: '0x0000000000000000000000000000000000000000',
-      isCompleted: false,
-      ratingFromRequester: BigNumber.from(0),
-      ratingFromOfferer: BigNumber.from(0)
-    });
-
-    const exchanges = this.userExchanges.get(userAddress) || [];
-    exchanges.push(id);
-    this.userExchanges.set(userAddress, exchanges);
-
-    this.SkillExchangePosted.emit(id, userAddress, skillOffered, skillRequested);
-  }
-
-  // Accept Skill Exchange
-  public async acceptSkillExchange(id: BigNumber): Promise<void> {
-    const exchange = this.skillExchanges.get(id);
-
-    if (!exchange) {
-      throw new Error('Skill exchange not found');
-    }
-
-    if (exchange.offerer !== '0x0000000000000000000000000000000000000000') {
-      throw new Error('Skill exchange already accepted');
-    }
-
-    if (exchange.requester === this.sender) {
-      throw new Error('Requester cannot accept own request');
-    }
-
-    if (!this.users.has(this.sender)) {
-      throw new Error('User not registered');
-    }
-
-    exchange.offerer = this.sender;
-    exchange.offererReputation = this.users.get(this.sender)!.reputation;
-
-    const exchanges = this.userExchanges.get(this.sender) || [];
-    exchanges.push(id);
-    this.userExchanges.set(this.sender, exchanges);
-
-    this.SkillExchangeAccepted.emit(id, this.sender);
-  }
-
-  // Complete Skill Exchange
-  public async completeSkillExchange(id: BigNumber): Promise<void> {
-    const exchange = this.skillExchanges.get(id);
-
-    if (!exchange) {
-      throw new Error('Skill exchange not found');
-    }
-
-    if (exchange.isCompleted) {
-      throw new Error('Skill exchange already completed');
-    }
-
-    if (exchange.requester !== this.sender && exchange.offerer !== this.sender) {
-      throw new Error('Only participants can complete');
-    }
-
-    exchange.isCompleted = true;
-
-    this.SkillExchangeCompleted.emit(id);
-  }
-
-  // Rate User
-  public async rateUser(id: BigNumber, rating: BigNumber): Promise<void> {
-    if (rating.lt(BigNumber.from(1)) || rating.gt(BigNumber.from(5))) {
-      throw new Error('Rating must be between 1 and 5');
-    }
-
-    const exchange = this.skillExchanges.get(id);
-
-    if (!exchange) {
-      throw new Error('Skill exchange not found');
-    }
-
-    if (!exchange.isCompleted) {
-      throw new Error('Skill exchange not completed');
-    }
-
-    const user = this.users.get(this.sender);
-
-    if (!user) {
-      throw new Error('User not registered');
-    }
-
-    if (this.sender === exchange.requester) {
-      if (!exchange.ratingFromRequester.eq(BigNumber.from(0))) {
-        throw new Error('Requester already rated');
-      }
-      exchange.ratingFromRequester = rating;
-
-      const offerer = this.users.get(exchange.offerer)!;
-      offerer.reputation = this.calculateNewReputation(offerer.reputation, offerer.ratingCount, rating);
-      offerer.ratingCount = offerer.ratingCount.add(1);
-      this.UserRated.emit(exchange.offerer, offerer.reputation);
-    } else if (this.sender === exchange.offerer) {
-      if (!exchange.ratingFromOfferer.eq(BigNumber.from(0))) {
-        throw new Error('Offerer already rated');
-      }
-      exchange.ratingFromOfferer = rating;
-
-      const requester = this.users.get(exchange.requester)!;
-      requester.reputation = this.calculateNewReputation(requester.reputation, requester.ratingCount, rating);
-      requester.ratingCount = requester.ratingCount.add(1);
-      this.UserRated.emit(exchange.requester, requester.reputation);
-    } else {
-      throw new Error('Only participants can rate');
-    }
-  }
-
-  private calculateNewReputation(currentReputation: BigNumber, ratingCount: BigNumber, newRating: BigNumber): BigNumber {
-    return currentReputation.mul(ratingCount).add(newRating).div(ratingCount.add(1));
-  }
-}
-
-// Define types for the contract
-interface User {
-  userAddress: string;
-  userName: string;
-  reputation: BigNumber;
-  ratingCount: BigNumber;
-}
-
-interface SkillExchange {
-  id: BigNumber;
-  requester: string;
-  skillOffered: string;
-  skillRequested: string;
-  offererReputation: BigNumber;
-  offerer: string;
-  isCompleted: boolean;
-  ratingFromRequester: BigNumber;
-  ratingFromOfferer: BigNumber;
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "keywords": [
+    "cardano",
+    "plutus",
+    "smart contract",
+    "smart-contract",
+    "smart contracts",
+    "smart-contracts",
+    "transaction",
+    "blockchain",
+    "block chain",
+    "block-chain",
+    "offchain",
+    "onchain",
+    "ada",
+    "ADA",
+    "dApp"
+  ],
+  "author": "Michele Nuzzi",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HarmonicLabs/plu-ts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HarmonicLabs/plu-ts/issues"
+  },
+  "homepage": "https://github.com/HarmonicLabs/plu-ts#readme",
+  "dependencies": {
+    "@harmoniclabs/bytestring": "^1.0.0",
+    "@harmoniclabs/cardano-costmodels-ts": "^1.0.0",
+    "@harmoniclabs/cardano-ledger-ts": "^0.1.3",
+    "@harmoniclabs/cbor": "^1.1.2",
+    "@harmoniclabs/pair": "^1.0.0",
+    "@harmoniclabs/plu-ts-offchain": "^0.1.9",
+    "@harmoniclabs/plu-ts-onchain": "^0.2.7",
+    "@harmoniclabs/plutus-data": "^1.0.0",
+    "@harmoniclabs/plutus-machine": "^1.0.4",
+    "@harmoniclabs/uint8array-utils": "^1.0.0",
+    "@harmoniclabs/uplc": "^1.1.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/blake2": "^4.0.1",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.14.6",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "rollup": "^3.18.0",
+    "tsc-alias": "^1.7.1",
+    "typescript": "^4.6.3",
+    "v8-profiler-next": "^1.9.0"
+  },
+  "funding": "https://github.com/sponsors/HarmonicLabs"
 }
